--- a/style.css
+++ b/style.css
@@ -1,10 +1,69 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* end of reset */
+
+h1 {
+  font-size: 17pt;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 13pt;
+  font-weight: bold;
+}
+
 body {
   font-family: sans-serif;
   background: lightgray;
+  counter-reset: page;
+  font-size: 8.5pt;
 }
 
 h2 {
   break-before: page;
+  /* break-before: right , makes the page on the right side */
 }
 
 @media print {
@@ -14,15 +73,35 @@ h2 {
 }
 
 @page {
-  size: 5in 8in;
+  size: 5in 8in; /* set for the class */
   margin-top: 0.25in;
   margin-bottom: 0.5in;
 }
 @page:left {
   margin-left: 0.25in;
   margin-right: 1in;
+  @bottom-left {
+    content: counter(page);
+  }
 }
 @page:right {
   margin-left: 1in;
   margin-right: 0.25in;
+}
+
+.two-col {
+  column-count: 2;
+  column-gap: 2em;
+}
+
+p:first-child {
+  margin-top: 0
+}
+
+img {
+  width: 100%;
+}
+
+figure {
+  margin: 0;
 }
