--- a/style.css
+++ b/style.css
@@ -73,24 +73,30 @@ h2 {
 }
 
 @page {
-  size: 5in 8in; /* set for the class */
+  size: 4.75in 8in; /* set for the class */
   margin-top: 0.25in;
   margin-bottom: 0.5in;
+  bleed: 0.25in;
+  marks: crop;
 }
 @page:left {
   margin-left: 0.25in;
-  margin-right: 0.75in;
+  margin-right: 0.5in;
   background-color: #000000;
-  @bottom-right {
+  @bottom-left {
     content: counter(page);
+    font-size: 72pt;
+    color: white;
+    font-weight: 200;
   }
   }
 
 @page:right {
-  margin-left: 0.75in;
+  margin-left: 0.5in;
   margin-right: 0.25in;
   @bottom-right {
     content: counter(page);
+    font-size: 6pt;
   }
 }
 
@@ -116,7 +122,7 @@ figure {
   z-index: 2;
   position: absolute;
   top: 140px;
-  left: -200px;
+  left: -204px;
 }
 
 .flip2 {
